src/catalog/materialization/snapshots/estuary__catalog__materialization__sql__test__ddl_is_generated_for_posgres_with_composit_primary_keys.snap
---
source: src/catalog/materialization/sql.rs
expression: schema
---
CREATE TABLE "test_postgres_table" IF NOT EXISTS (
	"intCol" BIGINT NOT NULL,
	"numCol" BIGINT NOT NULL,
	"boolCol" BOOLEAN NOT NULL,
	"objCol" JSON NOT NULL,
	"arrayCol" JSON NOT NULL,
	"intColNullable" BIGINT,
	"numColNullable" DOUBLE PRECISION,
	"boolColNullable" BOOLEAN,
	"objColNullable" JSON,
	"arrayColNullable" JSON,
	"basicString" TEXT NOT NULL,
	"basicStringNullable" TEXT,
	"base64String" BYTEA NOT NULL,
	"base64StringNullable" BYTEA,

	PRIMARY KEY("intCol", "numCol")
);
