src/catalog/materialization/snapshots/estuary__catalog__materialization__sql__test__ddl_is_generated_for_sqlite_with_composit_primary_keys.snap
---
source: src/catalog/materialization/sql.rs
expression: schema
---
CREATE TABLE "test_sqlite_table" IF NOT EXISTS (
	"intCol" INTEGER NOT NULL,
	"numCol" INTEGER NOT NULL,
	"boolCol" BOOLEAN NOT NULL,
	"objCol" TEXT NOT NULL,
	"arrayCol" TEXT NOT NULL,
	"intColNullable" INTEGER,
	"numColNullable" REAL,
	"boolColNullable" BOOLEAN,
	"objColNullable" TEXT,
	"arrayColNullable" TEXT,
	"basicString" TEXT NOT NULL,
	"basicStringNullable" TEXT,
	"base64String" BLOB NOT NULL,
	"base64StringNullable" BLOB,

	PRIMARY KEY("intCol", "numCol")
);
